// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activities component activities snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-l8c9ks"
      >
        <div
          class="css-0"
        >
          <button
            class="chakra-button css-1o5btma"
            type="button"
          >
            2
             items left
          </button>
        </div>
        <div
          class="css-17xejub"
        />
        <div
          class="css-0"
        >
          <div
            class="chakra-tabs css-0"
          >
            <div
              aria-orientation="horizontal"
              class="chakra-tabs__tablist css-1utx3w7"
              role="tablist"
            >
              <button
                aria-controls="tabs-:r8:--tabpanel-0"
                aria-disabled="false"
                aria-selected="true"
                class="chakra-tabs__tab css-an0qjo"
                data-index="0"
                id="tabs-:r8:--tab-0"
                role="tab"
                tabindex="0"
                type="button"
              >
                All
              </button>
              <button
                aria-controls="tabs-:r8:--tabpanel-1"
                aria-disabled="false"
                aria-selected="false"
                class="chakra-tabs__tab css-an0qjo"
                data-index="1"
                id="tabs-:r8:--tab-1"
                role="tab"
                tabindex="-1"
                type="button"
              >
                Active
              </button>
              <button
                aria-controls="tabs-:r8:--tabpanel-2"
                aria-disabled="false"
                aria-selected="false"
                class="chakra-tabs__tab css-an0qjo"
                data-index="2"
                id="tabs-:r8:--tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                Completed
              </button>
            </div>
          </div>
        </div>
        <div
          class="css-17xejub"
        />
        <div
          class="css-0"
        >
          <button
            class="chakra-button css-1o5btma"
            type="button"
          >
            Clear completed
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-l8c9ks"
    >
      <div
        class="css-0"
      >
        <button
          class="chakra-button css-1o5btma"
          type="button"
        >
          2
           items left
        </button>
      </div>
      <div
        class="css-17xejub"
      />
      <div
        class="css-0"
      >
        <div
          class="chakra-tabs css-0"
        >
          <div
            aria-orientation="horizontal"
            class="chakra-tabs__tablist css-1utx3w7"
            role="tablist"
          >
            <button
              aria-controls="tabs-:r8:--tabpanel-0"
              aria-disabled="false"
              aria-selected="true"
              class="chakra-tabs__tab css-an0qjo"
              data-index="0"
              id="tabs-:r8:--tab-0"
              role="tab"
              tabindex="0"
              type="button"
            >
              All
            </button>
            <button
              aria-controls="tabs-:r8:--tabpanel-1"
              aria-disabled="false"
              aria-selected="false"
              class="chakra-tabs__tab css-an0qjo"
              data-index="1"
              id="tabs-:r8:--tab-1"
              role="tab"
              tabindex="-1"
              type="button"
            >
              Active
            </button>
            <button
              aria-controls="tabs-:r8:--tabpanel-2"
              aria-disabled="false"
              aria-selected="false"
              class="chakra-tabs__tab css-an0qjo"
              data-index="2"
              id="tabs-:r8:--tab-2"
              role="tab"
              tabindex="-1"
              type="button"
            >
              Completed
            </button>
          </div>
        </div>
      </div>
      <div
        class="css-17xejub"
      />
      <div
        class="css-0"
      >
        <button
          class="chakra-button css-1o5btma"
          type="button"
        >
          Clear completed
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Activities component list snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="chakra-container css-1ig5rgb"
      >
        <div
          class="css-x0g6r9"
        >
          <div
            class="chakra-input__group css-bx0blc"
            data-group="true"
          >
            <div
              class="chakra-input__left-element css-1u2k0bl"
            >
              <svg
                class="chakra-icon css-1if5gp8"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <input
              class="chakra-input css-1u3thfl"
              placeholder="What needs to be done?"
              value=""
            />
          </div>
        </div>
        <div
          class="chakra-stack css-zdx2uo"
        >
          <div
            class="css-1hfixyc"
          >
            <div
              class="chakra-stack css-t8kiha"
            >
              <label
                class="css-4g6ai3"
              >
                <input
                  hidden=""
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value=""
                />
                <div
                  aria-hidden="true"
                  class="css-py28wa"
                />
              </label>
              <p
                class="chakra-text css-1xph9jp"
              >
                Тестовое задание
              </p>
            </div>
          </div>
          <div
            class="css-1hfixyc"
          >
            <div
              class="chakra-stack css-t8kiha"
            >
              <label
                class="css-4g6ai3"
              >
                <input
                  checked=""
                  hidden=""
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value=""
                />
                <div
                  aria-hidden="true"
                  class="css-py28wa"
                  data-checked=""
                >
                  <svg
                    class="chakra-icon css-t1gj7g"
                    focusable="false"
                    viewBox="0 0 14 14"
                  >
                    <g
                      fill="currentColor"
                    >
                      <polygon
                        points="5.5 11.9993304 14 3.49933039 12.5 2 5.5 8.99933039 1.5 4.9968652 0 6.49933039"
                      />
                    </g>
                  </svg>
                </div>
              </label>
              <s
                class="chakra-text css-1hitjv9"
              >
                Прекрасный код
              </s>
            </div>
          </div>
          <div
            class="css-1hfixyc"
          >
            <div
              class="chakra-stack css-t8kiha"
            >
              <label
                class="css-4g6ai3"
              >
                <input
                  hidden=""
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value=""
                />
                <div
                  aria-hidden="true"
                  class="css-py28wa"
                />
              </label>
              <p
                class="chakra-text css-1xph9jp"
              >
                Покрытие тестами
              </p>
            </div>
          </div>
        </div>
        <div
          class="css-l8c9ks"
        >
          <div
            class="css-0"
          >
            <button
              class="chakra-button css-1o5btma"
              type="button"
            >
              2
               items left
            </button>
          </div>
          <div
            class="css-17xejub"
          />
          <div
            class="css-0"
          >
            <div
              class="chakra-tabs css-0"
            >
              <div
                aria-orientation="horizontal"
                class="chakra-tabs__tablist css-1utx3w7"
                role="tablist"
              >
                <button
                  aria-controls="tabs-:r1:--tabpanel-0"
                  aria-disabled="false"
                  aria-selected="true"
                  class="chakra-tabs__tab css-an0qjo"
                  data-index="0"
                  id="tabs-:r1:--tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  All
                </button>
                <button
                  aria-controls="tabs-:r1:--tabpanel-1"
                  aria-disabled="false"
                  aria-selected="false"
                  class="chakra-tabs__tab css-an0qjo"
                  data-index="1"
                  id="tabs-:r1:--tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Active
                </button>
                <button
                  aria-controls="tabs-:r1:--tabpanel-2"
                  aria-disabled="false"
                  aria-selected="false"
                  class="chakra-tabs__tab css-an0qjo"
                  data-index="2"
                  id="tabs-:r1:--tab-2"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Completed
                </button>
              </div>
            </div>
          </div>
          <div
            class="css-17xejub"
          />
          <div
            class="css-0"
          >
            <button
              class="chakra-button css-1o5btma"
              type="button"
            >
              Clear completed
            </button>
          </div>
        </div>
        <div
          class="css-qvz413"
        />
        <div
          class="css-w8akdn"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="chakra-container css-1ig5rgb"
    >
      <div
        class="css-x0g6r9"
      >
        <div
          class="chakra-input__group css-bx0blc"
          data-group="true"
        >
          <div
            class="chakra-input__left-element css-1u2k0bl"
          >
            <svg
              class="chakra-icon css-1if5gp8"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="chakra-input css-1u3thfl"
            placeholder="What needs to be done?"
            value=""
          />
        </div>
      </div>
      <div
        class="chakra-stack css-zdx2uo"
      >
        <div
          class="css-1hfixyc"
        >
          <div
            class="chakra-stack css-t8kiha"
          >
            <label
              class="css-4g6ai3"
            >
              <input
                hidden=""
                style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                type="checkbox"
                value=""
              />
              <div
                aria-hidden="true"
                class="css-py28wa"
              />
            </label>
            <p
              class="chakra-text css-1xph9jp"
            >
              Тестовое задание
            </p>
          </div>
        </div>
        <div
          class="css-1hfixyc"
        >
          <div
            class="chakra-stack css-t8kiha"
          >
            <label
              class="css-4g6ai3"
            >
              <input
                checked=""
                hidden=""
                style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                type="checkbox"
                value=""
              />
              <div
                aria-hidden="true"
                class="css-py28wa"
                data-checked=""
              >
                <svg
                  class="chakra-icon css-t1gj7g"
                  focusable="false"
                  viewBox="0 0 14 14"
                >
                  <g
                    fill="currentColor"
                  >
                    <polygon
                      points="5.5 11.9993304 14 3.49933039 12.5 2 5.5 8.99933039 1.5 4.9968652 0 6.49933039"
                    />
                  </g>
                </svg>
              </div>
            </label>
            <s
              class="chakra-text css-1hitjv9"
            >
              Прекрасный код
            </s>
          </div>
        </div>
        <div
          class="css-1hfixyc"
        >
          <div
            class="chakra-stack css-t8kiha"
          >
            <label
              class="css-4g6ai3"
            >
              <input
                hidden=""
                style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                type="checkbox"
                value=""
              />
              <div
                aria-hidden="true"
                class="css-py28wa"
              />
            </label>
            <p
              class="chakra-text css-1xph9jp"
            >
              Покрытие тестами
            </p>
          </div>
        </div>
      </div>
      <div
        class="css-l8c9ks"
      >
        <div
          class="css-0"
        >
          <button
            class="chakra-button css-1o5btma"
            type="button"
          >
            2
             items left
          </button>
        </div>
        <div
          class="css-17xejub"
        />
        <div
          class="css-0"
        >
          <div
            class="chakra-tabs css-0"
          >
            <div
              aria-orientation="horizontal"
              class="chakra-tabs__tablist css-1utx3w7"
              role="tablist"
            >
              <button
                aria-controls="tabs-:r1:--tabpanel-0"
                aria-disabled="false"
                aria-selected="true"
                class="chakra-tabs__tab css-an0qjo"
                data-index="0"
                id="tabs-:r1:--tab-0"
                role="tab"
                tabindex="0"
                type="button"
              >
                All
              </button>
              <button
                aria-controls="tabs-:r1:--tabpanel-1"
                aria-disabled="false"
                aria-selected="false"
                class="chakra-tabs__tab css-an0qjo"
                data-index="1"
                id="tabs-:r1:--tab-1"
                role="tab"
                tabindex="-1"
                type="button"
              >
                Active
              </button>
              <button
                aria-controls="tabs-:r1:--tabpanel-2"
                aria-disabled="false"
                aria-selected="false"
                class="chakra-tabs__tab css-an0qjo"
                data-index="2"
                id="tabs-:r1:--tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                Completed
              </button>
            </div>
          </div>
        </div>
        <div
          class="css-17xejub"
        />
        <div
          class="css-0"
        >
          <button
            class="chakra-button css-1o5btma"
            type="button"
          >
            Clear completed
          </button>
        </div>
      </div>
      <div
        class="css-qvz413"
      />
      <div
        class="css-w8akdn"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
